# pitcrew-ci

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  HANDOFF.md  Makefile  README.md  adk_agent_build_plan.md  docker-compose.yml  mini_swe_agent_integration.md  pyproject.toml
control_plane/: __init__.py  agent.py  capabilities.py  guard.py  model.py  runtime.py  sandbox.py  semantic_cache.py
control_plane/config/: mcp_servers.yaml
control_plane/skills/browser-ops/: SKILL.md
control_plane/skills/web-research/: SKILL.md
scripts/: cache_demo.py  check_model.py  compaction_demo.py  persistence_demo.py  sandbox_demo.py  skills_demo.py  smoke_chat.py
tests/: test_capabilities.py  test_guard.py  test_runtime.py  test_semantic_cache.py
workload/: Dockerfile  pyproject.toml
workload/exec_service/: server.py
